--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.6.1/darkly/bootstrap.min.css" integrity="sha512-IfpSSZVYeTkzLWKDhcrbTIXJQA0R2xZJ47LxtdQvvukSFealc/FHjLAkZBTvmxQQyY3IC+qZx27Z5JmiJqUYVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
+  
+
 </head>
 <body>
   <app-root></app-root>
